fixed info a's actual text color and should resemble now fixed grey color which should fix any contrast issue now

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -211,7 +211,7 @@ footer {
     font-family: var(--heading-font); 
 }
 #info a {
-    color:#AA5F6D;
+    color:#F0F0F0;
     text-decoration: none;
 }
 
